[tool.poetry]
name = "bloxlink-lib"
version = "0.0.1"
description = "Abstracted algorithms and utility functions for Bloxlink"
authors = ["Bloxlink <oss@blox.link>"]
readme = "README.md"
homepage = "https://blox.link/"
repository = "https://github.com/bloxlink/bloxlink-lib"
packages = [{include = "bloxlink_lib"}]

[tool.poetry.dependencies]
python = "<3.13, >=3.12"
hikari = "<3.0.0, >=2.0.0.dev118"
motor = "^3.3.2"
redis = "^5.0.1"
requests = "^2.32.4"
pydantic = "^2.10.6"
discord-py = "^2.3.2"
sentry-sdk = "^2.22.0"
pydantic-settings = "^2.8.1"
python-generics = "^0.2.3"
pytest = "^8.2.2"
snowflake-id = "^1.0.2"
aiohttp-retry = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pylint = "^3.0.1"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.7"
pytest-env = "^1.1.3"
coverage = "^7.5.4"
pytest-docker = "^3.1.1"
pytest-cov = "^6.1.1"
pytest-asyncio-concurrent = "^0.5.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode = "strict"
markers = [
    "iterable",
    "binds",
    "nicknames",
    "database",
]

[tool.pytest_env]
BOT_RELEASE = "CANARY"
MONGO_USER = "admin"
MONGO_PASSWORD = "admin123"
MONGO_HOST = "localhost"
REDIS_HOST = "localhost"

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.coverage.run]
omit = [
    "*/test_utils/*",
    "*/tests/*",
    "bloxlink_lib/test_utils/*",
]

[tool.poetry.plugins."pytest11"]
bloxlink_lib_fixtures = "bloxlink_lib.test_utils"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"